# todo

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  todo  todo.py
.ci/: gate
.github/workflows/: lint.yml  prepare-release.yml  tests.yml
changelog.d/: 20260307_231500_sderev.md  20260307_235000_sderev.md  README.md
completion/: _todo_completion.bash  _todo_completion.zsh
tests/: test_cli.py  test_config.py  test_launcher.py  test_notes.py
todocli/: __init__.py  __main__.py  cli.py  config.py  notes.py
