[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "todo-daily-notes"
version = "0.1.0"
description = "Create and open daily markdown notes from the terminal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "click-default-group>=1.2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "scriv[toml]>=1.5.0",
]

[project.scripts]
todo = "todocli.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I001"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.scriv]
version = "literal: pyproject.toml: project.version"
format = "md"
md_header_level = 2
output_file = "CHANGELOG.md"
fragment_directory = "changelog.d"
new_fragment_template = "file: changelog.d/templates/fragment.md.j2"
categories = [
    "Added",
    "Changed",
    "Deprecated",
    "Removed",
    "Fixed",
    "Security",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"

[tool.hatch.build.targets.wheel]
packages = ["todocli"]
